# electSG_eVoting_system

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml
.hooks/: pre-commit  prepare-commit-msg
evoting/: Dockerfile  candidate_id.csv  docker-compose.test.yml  docker-compose.yml  generate_class_diagram.py  init.sh  localhost.crt  localhost.key  myapp_models.dot  requirements.txt  singpass_login.csv  wait-for-mongodb.sh  wait-for-postgres.sh
evoting/dbinit/: db_init.sql  initial_data.json
evoting/demo/: district.csv  singpass_login.csv  user_accounts.csv  voter_anonymity.py
evoting/evoting/: settings.py  urls.py
evoting/evoting/utils/: db_utils.py
evoting/infra/copilot/: .workspace
evoting/infra/copilot/django-server/: manifest.yml
evoting/infra/copilot/ringct-service/: manifest.yml
evoting/infra/diagram/: deployment.py  multiinstance.py
evoting/marketingwebsite/: package.json
evoting/marketingwebsite/src/: App.js
evoting/marketingwebsite/src/components/: About.jsx  Documentation.jsx  Info.jsx  Navbar.jsx  Vote.jsx
evoting/myapp/: auth_backends.py  decorators.py  forms.py  generate_data.py  media_storage.py  models.py  tempVoter.py  tests.py  urls.py  views.py
evoting/myapp/management/commands/: config.py  create_admin_acc.py  create_candidate_data.py  create_district_data.py  create_election_phase.py  create_mock_singpass_data.py  create_temp_voter.py
evoting/myapp/migrations/: 0001_initial.py  0002_alter_candidateprofile_profile_picture.py  0002_district_alter_useraccount_district.py  0002_singpassuser_salt_useraccount_first_login_and_more.py  0002_useraccount_first_login.py  0002_webauthnregistration_webauthncredentials.py  0003_electionphase.py  0003_useraccount_first_login.py  0003_webauthncredentials_is_master.py  0003_webauthncredentials_voter_webauthnregistration_voter_and_more.py  0004_remove_electionphase_description.py  0004_useraccount_username.py  0005_alter_useraccount_username.py  0006_remove_useraccount_user_id.py  0007_announcement_party_alter_useraccount_district_and_more.py  0008_announcement_date.py  0009_profile.py  0010_alter_useraccount_role.py  0011_candidateprofile.py  0012_useraccount_last_login.py  0013_temporaryvoter.py  0014_temporaryvoter_last_login.py
evoting/myapp/static/Candidate/: candidatePg.css  candidatePg.js
evoting/myapp/static/Voter/: header.css  voterPg.css  votingPg.css
evoting/myapp/static/adminDashboard/: home.css  script.js  style.css
evoting/myapp/static/announcement/: createAnnouncement.css  viewAnnouncement.css
evoting/myapp/static/css/: changepassword.css  firstlogin.css  login.css  myaccount.css  test.css
evoting/myapp/static/district/: addDistrict.css  editDistrict.css  viewDistrict.css
evoting/myapp/templates/: changePassword.html  firstLogin.html  login.html  myAccount.html  singpassLogin.html  test.html  webauthn_login.html  webauthn_register.html  webauthn_verify.html
evoting/myapp/tests/: integration_test.py  test_district.py  test_models.py  test_urls.py  test_views.py
evoting/pygrpc/: ringct_client.py  ringct_pb2.py  ringct_pb2.pyi  ringct_pb2_grpc.py  test_init.py
evoting/ringct/: CMakeLists.txt  Dockerfile  commitment.cpp  common.cmake  lsag.cpp  makefile  pseudoOuts_Output_commitments.cpp  rangeproof.cpp  rctType.h  wait-for-it.sh
evoting/ringct/dbinit/: create_index.sql  db_init.sql
evoting/ringct/proto/: ringct.proto
evoting/ringct/rct/: commitment.cpp  lsag.cpp  rangeproof.cpp  rctOps.cpp  rctOps.h  rctType.h
evoting/ringct/src/: core.cc  core.h  evoting.h  rct_server.cc  vote.cc  vote.h
evoting/ringct/test/: test_XOR_receiver.cpp  test_XOR_signer.cpp  test_add_keys.cpp  test_blasg.cpp  test_blinding_factors.cpp  test_borromean.cpp  test_c1c2.cpp  test_compute_commitment_mask.cpp  test_compute_commitment_simple.cpp  test_compute_key_image.cpp  test_compute_message.cpp  test_compute_stealth_address.cpp  test_hash.cpp  test_integration.cpp  test_pseudoBF.cpp  test_rangeproof.cpp  test_receiver_test_stealth_address.cpp  test_util.cc  test_util.h  test_verify_commitment_balancing.cpp  test_voting_currency.cpp
evoting/ringct/test/text/: XOR_receiver.txt  XOR_signer.txt  add_keys.txt  add_keys_base.txt  base.txt  blinding_factor.txt  blsag_signature.txt  borromean.txt  c1c2.txt  commitment_balancing.txt  commitment_mask.txt  commitment_simple.txt  gen_XOR_receiver.cpp  gen_XOR_signer.cpp  gen_add_keys.cpp  gen_blindingFactors.cpp  gen_blsag.cpp  gen_bool_borromean.cpp  gen_bool_verify_commitment_balancing.cpp  gen_borromean.cpp  gen_c1c2.cpp  gen_computeSA.cpp  gen_compute_commitment_mask.cpp  gen_compute_commitment_simple.cpp  gen_compute_key_image.cpp  gen_compute_message.cpp  gen_hash.cpp  gen_pseudoBF.cpp  gen_rangeproof.cpp  gen_receiver_test_stealth_address.cpp  gen_voting_currency.cpp  h2p.txt  h2s.txt  hash_infile  key_image.txt  process.py  pseudoBF.txt  rangeproof_output.txt  receiver_test_SA.txt  receiver_test_SA_decoy.txt  (+5 more)
evoting/ringct/util/: custom_exception.cc  custom_exception.h  db_util.cc  db_util.h
evoting/stresstest/: Dockerfile  candidate_id.csv  docker-compose.yml  locustfile.py  singpass_login.csv
evoting/test_py_grpc/: apps.py  grpc.html  urls.py  views.py
(+44 files in other folders)
